# intelligent-document-processing

./: .env.example  .gitignore  README.md  STATUS.md  docker-compose.yml  pyproject.toml
app/: main.py  schemas.py
app/api/: routes.py
app/confidence/: confidence.py
app/core/: config.py
app/db/: models.py
app/extraction/: extractor.py
app/ocr/: base_ocr.py  engines.py  factory.py  mock_ocr.py
app/pipeline/: pipeline.py
app/validation/: rule_engine.py  validator.py
datasets/invoices/: invoice_001.txt  invoice_002.txt  invoice_003.txt
docs/architecture/: overview.md
tests/: conftest.py  test_extractor.py  test_ocr.py  test_pipeline.py  test_validator.py
