[project]
name = "doc-processing-system"
version = "0.1.0"
description = "Project 2: Intelligent Document Processing System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.9",
  "SQLAlchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "tenacity>=8.3",
  "openai>=1.30",          # LLM-based extraction (EXTRACTION_MODE=llm)
  "httpx>=0.27",           # async HTTP (used by openai SDK)
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/db/init_db.py", "app/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.setuptools]
packages = ["app"]

